Latihan Desain Web

--- a/Modul_5/Desain Background/latihan 1_3.html
+++ b/Modul_5/Desain Background/latihan 1_3.html
@@ -7,7 +7,7 @@
     <title>Desain Background gambar</title>
     <style>
         body {
-            background-image: url(); /* membuat background dengan gambar */
+            background-image: url(kirito.jpg); /* membuat background dengan gambar */
             background-size:cover; /* mengatur besar ukuran background */
             background-repeat:no-repeat; /* mengatur pengulangan background */
             margin: 10px auto; /* membuat margins 10px auto */
@@ -21,7 +21,7 @@
         
         header {
             height: 150px; /* membuat tinggi 150px */
-            color: aqua; /* mengatur warna aqua */
+            color: black; /* mengatur warna aqua */
             text-align: center; /* membuat teks berada di tengah */
         }
     </style>
