--- a/Modul_7/Studi Kasus.html
+++ b/Modul_7/Studi Kasus.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <style>
     body {
-      background-image: url('whatsapp_bg.jpg');
+      background-image: url('https://www.itl.cat/pngfile/big/28-288916_download-wallpaper-whatsapp-green-download-gambar-wallpaper-wa.png');
       background-repeat: no-repeat;
       background-size: cover;
     }
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
         <a class="navbar-brand" href="#">
-          <img src="whatsapp_logo.png" width="30" height="30" alt="">
+          <img src="https://th.bing.com/th/id/OIP.qeBL7LoMSOxJnY_hd_ZOZgHaHc?w=183&h=184&c=7&r=0&o=5&dpr=1.3&pid=1.7" width="30" height="30" alt="">
           WhatsApp
         </a>
       </nav>
